<resources>
    <string name="app_name">Assignment 3-3</string>
    <string name="hello_world">Hello World!</string>
    <string name="button_text">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_hint">Login Name</string>
    <string name="password">Password</string>
    <string name="radiobutton_text">RadioButton</string>
    <string name="checkbox_text">CheckBox</string>
    <string name="switch_text">What does this do?</string>
    <string name="toast_switch_on">Switch is ON</string>
    <string name="toast_switch_off">Switch is OFF</string>
    <string name="dialog_message">Do you wish to finish the activity?</string>
    <string name="dialog_title">Finish!</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="one">Choice 1</string>
    <string name="two">Choice 2</string>
    <string name="three">Choice 3</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="about">About</string>
    <string name="about_toast">Version 1.0, by Shailendra Singh</string>
    <string name="selected_item_1">You selected item 1</string>
    <string name="go_back">Do you want to go back?</string>
    <string name="weather">Weather</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="minimum_temperature">Minimum Temperature</string>
    <string name="maximum_temperature">Maximum Temperature</string>
</resources>