<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@color/white"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radiobutton_text"/>

    <CheckBox
        android:id="@+id/ListCheckBox"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkbox_text"/>

    <Switch
        android:id="@+id/ListSwitch"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/switch_text"/>

    <ImageButton
        android:id="@+id/CamButton"
        android:onClick="CamButton_Handler"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />


</GridLayout>