<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatWindow">
    
    <ListView
        android:id="@+id/ChatView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/SendButton">
    </ListView>
    
    <EditText
        android:id="@+id/TextMessageBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ChatView"
        android:layout_toLeftOf="@id/SendButton"/>

    <Button
        android:id="@+id/SendButton"
        android:onClick="SendButton_OnClick"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout >