...
        android:text="@string/button_text"
        app:layout_constraintTop_toBottomOf="@id/textBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    
    <Button
        android:id="@+id/StartChat"
        android:onClick="StartButton_OnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chat"
        app:layout_constraintTop_toBottomOf="@id/MainButton"
        app:layout_constraintLeft_toLeftOf="parent"
...
